--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
     </form>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script> -->
+  <script src="/socket.io/socket.io.js"></script>
   <script src="main.js"></script>
 </body>
 
